CodeUpdaterMill, CodeAdapter refactoring, small changes and possible bugs in other classes